@@ -1,0 +1,27 @@
+#!/usr/bin/python
+#
+# Collect information about a kernel oops.
+#
+# Copyright (c) 2008 Canonical Ltd.
+# Author: Matt Zimmerman <mdz@canonical.com>
+#
+# This program is free software; you can redistribute it and/or modify it
+# under the terms of the GNU General Public License as published by the
+# Free Software Foundation; either version 2 of the License, or (at your
+# option) any later version.  See http://www.gnu.org/copyleft/gpl.html for
+# the full text of the license.
+
+import os, sys
+import apport, apport.fileutils
+
+oops = sys.stdin.read()
+
+# Uses default report type for now, should perhaps change this?
+pr = apport.Report('KernelOops')
+pr['Package'] = 'linux-image-' + os.uname()[2]
+pr['SourcePackage'] = 'linux'
+
+pr['OopsText'] = oops
+
+# write report
+pr.write(open(apport.fileutils.make_report_path(pr), 'w'))
