@@ -2,6 +2,7 @@ usr/share/apport/apport
 usr/share/apport/apport-checkreports
 usr/share/apport/package_hook
 usr/share/apport/kernel_crashdump
+usr/share/apport/kernel_oops
 usr/share/apport/gcc_ice_hook
 usr/share/apport/apport-unpack usr/bin
 usr/share/apport/testsuite/
