@@ -8,6 +8,8 @@ apport (0.115) UNRELEASED; urgency=low
   * Rename kernel_hook to kernel_crashdump (there are other kernel hooks)
   * Change kernel crash report type to KernelCrash
   * Fix automatix.py to not crash when automatix isn't installed
+  * Add bin/kernel_oops hook to capture a kernel oops (eg. via kerneloops)
+
 
   [ Martin Pitt ]
   * Add AUTHORS file for collecting the list of major contributors and
